syntax="proto3";
package github.com.igsr5.example;

option go_package = ".;dummyserver";

message ExampleRequest {
    string name = 1;
}

message ExampleResponse {
    string name = 1;
}

service TestService {
  rpc TestMethod (ExampleRequest) returns (ExampleResponse);
};
